-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: hotspot
-
b31
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8197278 | 8u192 | Yasumasa Suenaga | P3 | Resolved | Fixed | b01 |
| JDK-8196241 | 8u191 | Yasumasa Suenaga | P3 | Resolved | Fixed | b01 |
| JDK-8201040 | 8u181 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8190448 | 8u172 | Yasumasa Suenaga | P3 | Resolved | Fixed | b01 |
| JDK-8194104 | 8u171 | Yasumasa Suenaga | P3 | Resolved | Fixed | b01 |
| JDK-8189599 | 8u162 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b07 |
| JDK-8203080 | emb-8u181 | Yasumasa Suenaga | P3 | Resolved | Fixed | master |
| JDK-8198071 | emb-8u171 | Yasumasa Suenaga | P3 | Resolved | Fixed | b01 |
I checked GC log, Java heap and Metaspace was NOT exhausted.
------------
[Full GC (Last ditch collection) [Tenured: 1049K->1049K(10944K), 0.0050992 secs] 1049K->1049K(15936K), [Metaspace: 4871K->4871K(1056768K)], 0.0051411 secs] [Times: user=0.01 sys=0.00, real=0.00 secs]
[Full GC (Metadata GC Threshold) [Tenured: 1049K->1049K(10944K), 0.0050587 secs] 1049K->1049K(15936K), [Metaspace: 4871K->4871K(1056768K)], 0.0051023 secs] [Times: user=0.00 sys=0.00, real=0.01 secs]
[Full GC (Last ditch collection) [Tenured: 1049K->1049K(10944K), 0.0050200 secs] 1049K->1049K(15936K), [Metaspace: 4871K->4871K(1056768K)], 0.0050613 secs] [Times: user=0.01 sys=0.00, real=0.00 secs]
Exception: java.lang.OutOfMemoryError thrown from the UncaughtExceptionHandler in thread "main"
------------
My environment:
Fedora22 x86_64
- kernel-4.0.4-303.fc22.x86_64
- glibc-2.21-5.fc22.x86_64
- java-1.8.0-openjdk-1.8.0.45-39.b14.fc22.x86_64
- apache-tomcat-8.0.23
The Compressed ClassSpace is a part of Metaspace.
The size of the Compressed ClassSpace is included in the comparison with MaxMetaspaceSize only
when the space is committed [1].
However, users cannot know their incorrect parameter(s) until memory space will be committed.
Compressed ClassSpace is continuous memory space, and its default value is 1GB.
In case of Linux, it affects overcommit memory. It will be cause of OOM-killer at the worst case.
So I want to alert inconsistency metaspace setting at early as possible.
[1] http://mail.openjdk.java.net/pipermail/hotspot-gc-dev/2015-June/013817.html
- backported by
-
JDK-8189599 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-
-
JDK-8190448 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-
-
JDK-8194104 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-
-
JDK-8196241 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-
-
JDK-8197278 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-
-
JDK-8198071 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-
-
JDK-8201040 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-
-
JDK-8203080 InitialBootClassLoaderMetaspaceSize and CompressedClassSpaceSize should be checked consistent from MaxMetaspaceSize
-
- Resolved
-